[gd_scene load_steps=37 format=2]

[ext_resource path="res://WholeWall1.gd" type="Script" id=1]
[ext_resource path="res://WholesmallWall.gd" type="Script" id=2]
[ext_resource path="res://WholesmallWall2.gd" type="Script" id=3]
[ext_resource path="res://WholeRoofandLeft.gd" type="Script" id=4]
[ext_resource path="res://WholeFloorandRight.gd" type="Script" id=5]
[ext_resource path="res://WholesmallWall4.gd" type="Script" id=6]
[ext_resource path="res://WholesmallWall3.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 545, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 305 )

[sub_resource type="Animation" id=11]
resource_name = "Invisible"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Roof:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Left:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Roof:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Left:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "Visible"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Roof:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Left:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 545, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 305.5 )

[sub_resource type="Animation" id=14]
resource_name = "Invisible"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Floor:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Right:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Floor:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Right:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "Visible"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Floor:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Right:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 7, 105.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 199, 7 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 7, 110 )

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 138, 7 )

[sub_resource type="Animation" id=17]
resource_name = "Invisible"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sepa-Wall:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("S-Sepa-Wall:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("S-Sepa-Wall2:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("S-Sepa-Wall3:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sepa-Wall:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("S-Sepa-Wall:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("S-Sepa-Wall2:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("S-Sepa-Wall3:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "Visible"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sepa-Wall:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("S-Sepa-Wall:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("S-Sepa-Wall3:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("S-Sepa-Wall2:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 6, 149 )

[sub_resource type="Animation" id=20]
resource_name = "Invisible"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=21]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "Visible"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 7, 184 )

[sub_resource type="Animation" id=25]
resource_name = "Invisible"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sepa-Wall:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=23]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sepa-Wall:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=24]
resource_name = "Visible"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sepa-Wall:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 7, 205 )

[sub_resource type="Animation" id=26]
resource_name = "Invisible"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=27]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=28]
resource_name = "Visible"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Wall" type="Node2D"]
script = ExtResource( 1 )

[node name="RoofandLeft" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3
script = ExtResource( 4 )

[node name="Roof" type="CollisionShape2D" parent="RoofandLeft"]
position = Vector2( 535, 0 )
shape = SubResource( 1 )

[node name="Left" type="CollisionShape2D" parent="RoofandLeft"]
position = Vector2( 0, 295 )
shape = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="RoofandLeft"]

[node name="Roof" type="ColorRect" parent="RoofandLeft/CanvasLayer"]
margin_left = -10.0
margin_top = -10.0
margin_right = 1080.0
margin_bottom = 10.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="ColorRect" parent="RoofandLeft/CanvasLayer"]
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="RoofandLeft/CanvasLayer"]
anims/Invisible = SubResource( 11 )
anims/RESET = SubResource( 12 )
anims/Visible = SubResource( 13 )

[node name="FloorandRight" type="Area2D" parent="."]
position = Vector2( 1080, 600 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 5 )

[node name="Floor" type="CollisionShape2D" parent="FloorandRight"]
position = Vector2( -535, 0 )
shape = SubResource( 3 )

[node name="Right" type="CollisionShape2D" parent="FloorandRight"]
position = Vector2( 0, -295.5 )
shape = SubResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="FloorandRight"]

[node name="Floor" type="ColorRect" parent="FloorandRight/CanvasLayer"]
margin_top = 590.0
margin_right = 1090.0
margin_bottom = 610.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="ColorRect" parent="FloorandRight/CanvasLayer"]
margin_left = 1070.0
margin_top = -1.0
margin_right = 1090.0
margin_bottom = 610.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="FloorandRight/CanvasLayer"]
anims/Invisible = SubResource( 14 )
anims/RESET = SubResource( 15 )
anims/Visible = SubResource( 16 )

[node name="Separation" type="Area2D" parent="."]
position = Vector2( 281, 0 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="Wall" type="CollisionShape2D" parent="Separation"]
position = Vector2( 0, 95.5 )
shape = SubResource( 5 )

[node name="S-separation" type="Area2D" parent="Separation"]
position = Vector2( 0, 194 )
collision_layer = 4
collision_mask = 3

[node name="Wall" type="CollisionShape2D" parent="Separation/S-separation"]
position = Vector2( 49, 0 )
shape = SubResource( 6 )

[node name="S-separation2" type="Area2D" parent="Separation"]
position = Vector2( 241, 194 )
collision_layer = 4
collision_mask = 3

[node name="Wall" type="CollisionShape2D" parent="Separation/S-separation2"]
position = Vector2( 0, 103 )
shape = SubResource( 29 )

[node name="S-separation3" type="Area2D" parent="Separation"]
position = Vector2( 241, 353 )
collision_layer = 4
collision_mask = 3

[node name="Wall" type="CollisionShape2D" parent="Separation/S-separation3"]
position = Vector2( -131, 0 )
shape = SubResource( 30 )

[node name="CanvasLayer" type="CanvasLayer" parent="Separation"]

[node name="Sepa-Wall" type="ColorRect" parent="Separation/CanvasLayer"]
margin_left = 274.0
margin_top = -10.0
margin_right = 288.0
margin_bottom = 201.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="S-Sepa-Wall" type="ColorRect" parent="Separation/CanvasLayer"]
margin_left = 131.0
margin_top = 187.0
margin_right = 529.0
margin_bottom = 201.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="S-Sepa-Wall2" type="ColorRect" parent="Separation/CanvasLayer"]
margin_left = 515.0
margin_top = 187.0
margin_right = 529.0
margin_bottom = 407.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="S-Sepa-Wall3" type="ColorRect" parent="Separation/CanvasLayer"]
margin_left = 253.0
margin_top = 346.0
margin_right = 529.0
margin_bottom = 360.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Separation/CanvasLayer"]
anims/Invisible = SubResource( 17 )
anims/RESET = SubResource( 18 )
anims/Visible = SubResource( 19 )

[node name="Separation2" type="Area2D" parent="."]
position = Vector2( 142, 600 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 3 )

[node name="Wall" type="CollisionShape2D" parent="Separation2"]
position = Vector2( 0, -139 )
shape = SubResource( 7 )

[node name="CanvasLayer" type="CanvasLayer" parent="Separation2"]

[node name="Wall" type="ColorRect" parent="Separation2/CanvasLayer"]
margin_left = 136.0
margin_top = 312.0
margin_right = 148.0
margin_bottom = 610.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Separation2/CanvasLayer"]
root_node = NodePath("../Wall")
anims/Invisible = SubResource( 20 )
anims/RESET = SubResource( 21 )
anims/Visible = SubResource( 22 )

[node name="Separation3" type="Area2D" parent="."]
position = Vector2( 930, 0 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 7 )

[node name="Wall" type="CollisionShape2D" parent="Separation3"]
position = Vector2( 0, 174 )
shape = SubResource( 8 )

[node name="CanvasLayer" type="CanvasLayer" parent="Separation3"]

[node name="Sepa-Wall" type="ColorRect" parent="Separation3/CanvasLayer"]
margin_left = 923.0
margin_top = -10.0
margin_right = 937.0
margin_bottom = 358.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Separation3/CanvasLayer"]
anims/Invisible = SubResource( 25 )
anims/RESET = SubResource( 23 )
anims/Visible = SubResource( 24 )

[node name="Separation4" type="Area2D" parent="."]
position = Vector2( 767, 600 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 6 )

[node name="Wall" type="CollisionShape2D" parent="Separation4"]
position = Vector2( 0, -195 )
shape = SubResource( 10 )

[node name="CanvasLayer" type="CanvasLayer" parent="Separation4"]

[node name="Wall" type="ColorRect" parent="Separation4/CanvasLayer"]
margin_left = 760.0
margin_top = 198.0
margin_right = 774.0
margin_bottom = 610.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Separation4/CanvasLayer"]
root_node = NodePath("../Wall")
anims/Invisible = SubResource( 26 )
anims/RESET = SubResource( 27 )
anims/Visible = SubResource( 28 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="Difficult" from="." to="RoofandLeft" method="_on_Wall_Difficult"]
[connection signal="Difficult" from="." to="FloorandRight" method="_on_Wall_Difficult"]
[connection signal="Difficult" from="." to="Separation" method="_on_Wall_Difficult"]
[connection signal="Difficult" from="." to="Separation2" method="_on_Wall_Difficult"]
[connection signal="Difficult" from="." to="Separation3" method="_on_Wall_Difficult"]
[connection signal="Difficult" from="." to="Separation4" method="_on_Wall_Difficult"]
[connection signal="animation_finished" from="RoofandLeft/CanvasLayer/AnimationPlayer" to="RoofandLeft" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="RoofandLeft/CanvasLayer/AnimationPlayer" to="RoofandLeft" method="_on_AnimationPlayer_animation_started"]
[connection signal="animation_finished" from="FloorandRight/CanvasLayer/AnimationPlayer" to="FloorandRight" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="FloorandRight/CanvasLayer/AnimationPlayer" to="FloorandRight" method="_on_AnimationPlayer_animation_started"]
[connection signal="animation_finished" from="Separation/CanvasLayer/AnimationPlayer" to="Separation" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="Separation/CanvasLayer/AnimationPlayer" to="Separation" method="_on_AnimationPlayer_animation_started"]
[connection signal="animation_finished" from="Separation2/CanvasLayer/AnimationPlayer" to="Separation2" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="Separation2/CanvasLayer/AnimationPlayer" to="Separation2" method="_on_AnimationPlayer_animation_started"]
[connection signal="animation_finished" from="Separation3/CanvasLayer/AnimationPlayer" to="Separation3" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="Separation3/CanvasLayer/AnimationPlayer" to="Separation3" method="_on_AnimationPlayer_animation_started"]
[connection signal="animation_finished" from="Separation4/CanvasLayer/AnimationPlayer" to="Separation4" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="Separation4/CanvasLayer/AnimationPlayer" to="Separation4" method="_on_AnimationPlayer_animation_started"]
[connection signal="timeout" from="Timer" to="RoofandLeft" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="FloorandRight" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="Separation" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="Separation2" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="Separation3" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="Separation4" method="_on_Timer_timeout"]
